<resources>
    <string name="app_name">Caketory</string>
    <string name="app_name_fa">کیکطوری</string>

    <string name="w_bestSelling">محصولات پرفروش</string>
    <string name="w_categories">انواع محصولات</string>
    <string name="w_addToShoppingBasket">افزودن به سبد خرید</string>
    <string name="w_shoppingBasket">سبد خرید</string>
    <string name="w_ordering">مرتب سازی</string>
    <string name="w_filtering">فیلترکردن</string>
    <string name="w_productPrice">قیمت محصول</string>
    <string name="w_totalPrice">قیمت کل</string>
    <string name="w_quantity">مقدار سفارش</string>
    <string name="w_totalDiscount">جمع تخفیف ها</string>
    <string name="w_finalPrice">قیمت نهایی</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="nav_row_1">انواع محصولات</string>
    <string name="nav_row_2">موارد مورد علاقه</string>
    <string name="nav_row_3">کیک</string>
    <string name="nav_row_4">شیرینی خشک</string>
    <string name="nav_row_5">شیرینی تر</string>
    <string name="nav_row_6">دسر</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings2">About Us</string>

    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="city">امکان سفارش از قنادی دلخواه</string>
    <string name="verified">فروش با کیفیت تضمینی</string>
    <string name="store">دسترسی به نزدیک ترین قنادی به شما</string>
    <string name="shipping">آماده ارسال به محض سفارش</string>
    <string name="finalizeOrder">نهایی کردن سفارش</string>

    <string name="text">
        To create a dynamic and multi-pane user interface on Android,
        you need to encapsulate UI components and activity behaviors into
        modules that you can swap into and out of your activities.
        You can create these modules with the Fragment class,
        which behaves somewhat like a nested activity that can
        define its own layout and manage its own lifecycle.
        When a fragment specifies its own layout, it can be configured
        in different combinations with other fragments inside an activity to
        modify your layout configuration for different screen sizes
        (a small screen might show one fragment at a time, but a large screen can show two or more).
        This class shows you how to create a dynamic user experience
        with different screen sizes, all while continuing to support devices
        running versions as old as Android 1.6.
        You can think of a fragment as a modular section of an activity,
        which has its own lifecycle, receives its own input events,
        and which you can add or remove while the activity is running
        (sort of like a "sub activity" that you can reuse in different activities).
        This lesson shows how to extend the Fragment class using the Support Library
        so your app remains compatible with devices running system versions as low as Android 1.6.
        Before you begin this lesson, you must set up your Android project to use the Support Library.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.
        You can create these modules with the Fragment class.

    </string>

    <string name="text2">
        To create a dynamic and multi-pane user interface on Android,
        you need to encapsulate UI components and activity behaviors into
        modules that you can swap into and out of your activities.
        You can create these modules with the Fragment class,
        which behaves somewhat like a nested activity that can
        define its own layout and manage its own lifecycle.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">بعدی</string>
    <string name="activate">فعال سازی</string>
    <string name="enterPhoneNumber">شماره تلفن خود را وارد کنید</string>
    <string name="enterSentCode">کد دریافت شده را وارد کنید</string>
    <string name="empty_basket">سبد خرید شما خالیست!</string>
</resources>
