<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cat_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:fitsSystemWindows="true"
    tools:context="a2.thesis.com.caketory.CategoryActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/cat_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="112.5dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/cat_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/cat_toolbar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="snap">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="56dp"
                    android:background="#FFF">

                    <TextView
                        android:id="@+id/textView_ordering"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="48dp"
                        android:drawableEnd="@drawable/ic_sort"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/w_ordering"
                        android:textColor="#757575"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@color/colorDivider" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="#33000000" />

                    <TextView
                        android:id="@+id/textView_filtering"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="48dp"
                        android:drawableEnd="@drawable/ic_filter"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:text="@string/w_filtering"
                        android:textColor="#757575"
                        android:textSize="15sp" />

                </RelativeLayout>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/cat_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_collapseMode="none"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/cat_textView_toolbarTitle"
                    style="@style/cat_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name_fa" />
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/cat_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_catProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cat_appbar_layout"
            android:clipToPadding="false"
            android:padding="5dp"
            android:scrollbars="none" />
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
